Preparando o espaço para imagens

--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -5,6 +5,9 @@
     section#main-text{
         width: 98.7vw;
     }
+    section#touristic-points{
+        width: 98.7vw;
+    }
 }
 @media screen and (max-height:950px){
     main{
