--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,6 +18,10 @@
         background-color: var(--lead-button-hover);
     }
 }
+h3{
+    font-weight: 550;
+    font-size: 30px;
+}
 main{
     background-image: url(../images/background-filtro.png);
     background-position: center -50px;
@@ -75,12 +79,10 @@ main{
 
         & h3{
             color: white;
-            font-size: 30px;
             margin-bottom: 15px;
         }
         & #square{
             margin-left: 44%;
-            background-color: black;
             width: 30px;
             height: 30px;
             position: absolute;
@@ -89,8 +91,7 @@ main{
     }
 }
 section#main-text{
-    margin-top: 100px;
-    height: 150px;
+    margin-top: 90px;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -101,7 +102,101 @@ section#main-text{
 
         & h4{
             font-weight: 550;
-            font-size: 25px;
+            font-size: 22px;
+        }
+    }
+}
+section#touristic-points{
+    margin-top: 90px;
+    width: 100vw;
+    height: 1300px;
+
+    & .touristic-points-content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        & .title{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 90px;
+    
+            & h3{
+                text-align: center;
+            }
+        }
+        & .pictures{
+            width: 90%;
+            height: 70pc;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            & img{
+                border-radius: 5px;
+                width: 20%;
+            }
+            & .line-one{
+                width: 100%;
+                height: 30%;
+                display: flex;
+                justify-content: space-between;
+                gap: 20px;
+
+                & #two-images-column{
+                    width: 20%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+
+                    & img{
+                        width: 100%;
+                        height: 50%;
+                        height: 100%;
+                    }
+                }
+                & #main-image-line-one{
+                    width: 60%;
+                    height: 100%;
+
+                    & img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                & #side-image-line-one{
+                    height: 100%;
+                    width: 20%;
+
+                    & img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+            & #lead-section{
+                width: 100%;
+                height: 30%;
+
+                & img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            & #line-two{
+                width: 100%;
+                height: 36%;
+                display: flex;
+                justify-content: space-between;
+
+                & img{
+                    width: 49%;
+                    height: 100%;
+                }
+            }
         }
     }
 }
