--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -82,6 +82,7 @@ main{
             margin-bottom: 15px;
         }
         & #square{
+            background-color: black;
             margin-left: 44%;
             width: 30px;
             height: 30px;
@@ -135,9 +136,9 @@ section#touristic-points{
             flex-direction: column;
             gap: 20px;
 
-            & img{
+            & .picture{
                 border-radius: 5px;
-                width: 20%;
+                border: 2px solid black;
             }
             & .line-one{
                 width: 100%;
@@ -146,34 +147,56 @@ section#touristic-points{
                 justify-content: space-between;
                 gap: 20px;
 
+                & .picture-content{
+                    background-color: rgba(0, 0, 0, 0.384);
+                    height: 100%;
+                    width: 100%;
+                }
                 & #two-images-column{
                     width: 20%;
                     display: flex;
                     flex-direction: column;
                     gap: 20px;
 
-                    & img{
+                    & div{
                         width: 100%;
                         height: 50%;
                         height: 100%;
+
+                        &#ponta-negra{
+                            background-image: url(../images/Ponta-Negra.png);
+                        }
+                        &#musa{
+                            background-image: url(../images/Musa.png);
+                        }
                     }
                 }
                 & #main-image-line-one{
                     width: 60%;
                     height: 100%;
 
-                    & img{
+                    & div{
                         width: 100%;
                         height: 100%;
+
+                        &#encontro-aguas{
+                            background-image: url(../images/encontro-aguas.png);
+                            background-position: center;
+                        }
                     }
                 }
                 & #side-image-line-one{
                     height: 100%;
                     width: 20%;
 
-                    & img{
+                    & div{
                         width: 100%;
                         height: 100%;
+
+                        &#ponte-rio-negro{
+                            background-image: url(../images/Ponte-Rio-Negro.png);
+                            background-position: center;
+                        }
                     }
                 }
             }
@@ -181,9 +204,63 @@ section#touristic-points{
                 width: 100%;
                 height: 30%;
 
-                & img{
+                & div{
                     width: 100%;
                     height: 100%;
+                    
+                    &#lead-section-image{
+                        background-image: url(../images/lead-image-section.png);
+                        background-position: right center;
+
+                        & .lead-container{
+                            width: 60%;
+                            height: 100%;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            & .lead-content{
+                                width: 80%;
+                                height: 100%;
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: space-around;
+                                align-items: center;
+
+                                & div{
+                                    height: auto;
+                                    width: auto;
+                                }
+                                & #lead-title{
+
+                                    & h4{
+                                        font-size: 28px;
+                                        font-weight: 500;
+                                    }
+                                }
+                                & #lead-forms{
+                                    width: 100%;
+                                    display: flex;
+                                    justify-content: space-between;
+
+                                    input{
+                                        border: none;
+                                        border-radius: 10px;
+                                        width: 47%;
+                                        height: 70%;
+                                        padding: 10px 5px 10px 9px;
+                                        font-size: 20px;
+                                        color: gray;
+
+                                        &:focus{
+                                            outline: none;
+                                            border: 1px solid var(--lead-button);
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
             }
             & #line-two{
@@ -192,10 +269,34 @@ section#touristic-points{
                 display: flex;
                 justify-content: space-between;
 
-                & img{
-                    width: 49%;
+                & div{
+                    width: 68.4%;
                     height: 100%;
+
+                    &.picture-content{
+                        background-color: rgba(0, 0, 0, 0.384);
+                        height: 100%;
+                        width: 100%;
+                    }
+                    &#praia-lua{
+                        background-image: url(../images/Praia-Lua.png);
+                        background-position: center;
+                    }
+                    &#inpa{
+                        width: 30%;
+                        background-image: url(../images/Inpa.png);
+                        background-position: center;
+                    }
                 }
+            }
+        }
+        & .picture-text{
+            width: 95%;
+            margin: 90px 0px;
+
+            & h4{
+                font-weight: 550;
+                font-size: 22px;
             }
         }
     }
