--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@keyframes textFadeIn{
+    0%{
+        color: rgba(255, 255, 255, 0);
+    }
+    100%{
+        color: white;
+    }
+}
 *{
     margin: 0;
     padding: 0;
@@ -139,6 +147,46 @@ section#touristic-points{
             & .picture{
                 border-radius: 5px;
                 border: 2px solid black;
+                cursor: pointer;
+
+                & .picture-content{
+                    background-color: rgba(0, 0, 0, 0.384);
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+                    transition: all 2s linear;
+
+                    & h4{
+                        color: white;
+                        font-size: 20px;
+                        display: none;
+                    }
+                    &:hover{
+                        transition: all 2s linear;
+
+                        & h4{
+                            display: block;
+                            animation: textFadeIn 1s alternate linear;
+                        }
+                    }
+                }
+                &#lead-section-image{
+                    cursor: default;
+
+                    & h4{
+                        cursor: text;
+                        color: black;
+                        display: block;
+                        animation: none;
+                    }
+                    & .picture-content{
+                        background: none;
+                        display: block;
+                    }
+                }
             }
             & .line-one{
                 width: 100%;
@@ -147,11 +195,6 @@ section#touristic-points{
                 justify-content: space-between;
                 gap: 20px;
 
-                & .picture-content{
-                    background-color: rgba(0, 0, 0, 0.384);
-                    height: 100%;
-                    width: 100%;
-                }
                 & #two-images-column{
                     width: 20%;
                     display: flex;
@@ -182,6 +225,10 @@ section#touristic-points{
                         &#encontro-aguas{
                             background-image: url(../images/encontro-aguas.png);
                             background-position: center;
+
+                            & h4{
+                                font-size: 30px;
+                            }
                         }
                     }
                 }
@@ -274,18 +321,25 @@ section#touristic-points{
                     height: 100%;
 
                     &.picture-content{
-                        background-color: rgba(0, 0, 0, 0.384);
                         height: 100%;
                         width: 100%;
                     }
                     &#praia-lua{
                         background-image: url(../images/Praia-Lua.png);
                         background-position: center;
+
+                        & h4{
+                            font-size: 30px;
+                        }
                     }
                     &#inpa{
                         width: 30%;
                         background-image: url(../images/Inpa.png);
                         background-position: center;
+
+                        & h4{
+                            font-size: 22px;
+                        }
                     }
                 }
             }
@@ -297,7 +351,168 @@ section#touristic-points{
             & h4{
                 font-weight: 550;
                 font-size: 22px;
+                text-align: center;
             }
+        }
+    }
+}
+section#time-line{
+    width: 100vw;
+    height: 2000px;
+
+    & .time-line-content{
+        width: 100%;
+        height: 100%;
+
+        & .main-icon{
+            width: 100%;
+            height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            & .main-ellipse-one{
+                background-color: #ece924a9;
+                width: 300px;
+                height: 100%;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+    
+                & .main-ellipse-two{
+                    width: 75%;
+                    height: 75%;
+                    background-color:#ECE824;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+    
+                    & p{
+                        font-weight: bold;
+                        font-style: italic;
+                        font-size: 35px;
+                        transform: rotate(-20deg);
+                    }
+                }
+            }
+        }
+        & .line{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            & .line-content{
+                width: 48%;
+                height: 100%;
+
+                &#main-line{
+                    background-color: rgba(0, 0, 0, 0.705);
+                    width: 3px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    & .main-line-content{
+                        width: 100%;
+                        height: 70%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;
+
+                        & .line-ellipse{
+                            background-color: #ECE824;
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            
+                            & .selected{
+                                border-radius: 50%;
+                                background-color: var(--lead-button-hover);
+                                width: 65%;
+                                height: 65%;
+                                display: none;
+                            }
+                            &:hover .selected{
+                                display: block;
+                            }
+                        }
+                    }
+                }
+                &#left-column, &#right-column{
+                    display: flex;
+                    align-items: end;
+
+                    & .column-content{
+                        width: 100%;
+                        height: 85%;
+
+                        & .side-column-content{
+                            width: 100%;
+                            height: 76%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+
+                            & .text-box{
+                                width: 92%;
+                                height: 30%;
+                                display: flex;
+                                flex-direction: column;
+
+                                & h4{
+                                    font-size: 23px;
+                                    margin-bottom: 20px;
+                                }
+                                & h5{
+                                    font-size:21px;
+                                    font-weight: 500;
+                                    width: 90%;
+                                }
+                            }
+                        }
+                    }
+                }
+                &#left-column{
+
+                    & #left-column-content{
+                        width: 100%;
+                        align-items: end;
+                    }
+                    & .text-box{
+                        text-align: start;
+                        height: 28%;
+                        align-items: start;
+                    }
+                }
+                &#right-column .column-content{
+                    display: flex;
+                    align-items: end;
+
+                    & .side-column-content{
+                        height: 73%;
+                        align-items: start;
+
+                        & .text-box{
+                            text-align: end;
+                            height: 25%;
+                            align-items: end;
+                        }
+                    }
+                }
+            }
+        }
+        & .line-button{
+            width: 100%;
+            display: flex;
+            justify-content: center;
         }
     }
 }
