--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -358,7 +358,7 @@ section#touristic-points{
 }
 section#time-line{
     width: 100vw;
-    height: 2000px;
+    height: 2400px;
 
     & .time-line-content{
         width: 100%;
@@ -513,6 +513,79 @@ section#time-line{
             width: 100%;
             display: flex;
             justify-content: center;
+        }
+    }
+}
+section#comments{
+    width: 100vw;
+    margin-top: 480px;
+
+    & .comments-content{
+        width: 100%;
+        height: 100%;
+
+        & .title{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+
+            & h3{
+                font-size: 28px;
+            }
+            & p{
+                font-size: 16px;
+                font-weight: 500;
+            }
+        }
+        & .cards{
+            margin-top: 50px;
+            width: 100%;
+            display: flex;
+            gap: 30px;
+            justify-content: center;
+
+            & .card{
+                border-radius: 7px;
+                width: 275px;
+                height: 175px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+
+                & .card-image{
+                    width: 295px;
+                    height: 195px;
+                    position: absolute;
+                    display: flex;
+                    align-items: start;
+                    justify-content: right;
+
+                    & img{
+                        border-radius: 50%;
+                        position: absolute;
+                        width: 71px;
+                        height: 71px;
+                    }
+                }
+                & .card-content{
+                    width: 80%;
+                    height: 80%;
+                    overflow: hidden;
+                    z-index: 2;
+
+                    & h4{
+                        font-size: 23px;
+                    }
+                    & h5{
+                        margin-top: 15px;
+                        font-size: 21px;
+                        font-weight: 400;
+                        height: 100%;
+                    }
+                }
+            }
         }
     }
 }
