--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -555,7 +555,7 @@ section#comments{
                 box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 
                 & .card-image{
-                    width: 295px;
+                    width: 290px;
                     height: 195px;
                     position: absolute;
                     display: flex;
@@ -587,5 +587,58 @@ section#comments{
                 }
             }
         }
+    }
+}
+section#final-questions{
+    background: linear-gradient(to bottom, #fff 10%, #FEBA78);
+    width: 100vw;
+    margin-top: 90px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    & .final-question-content{
+        width: 90%;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        & .final-cards{
+            background-color: white;
+            width: 100%;
+            height: 50px;
+            border-radius: 7px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+
+            & .final-card-message{
+                width: 97%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                
+                & i{
+                    cursor: pointer;
+                    
+                    &:hover{
+                        animation: rotateAngle 0.2s linear;
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+        }
+    }
+}
+@keyframes rotateAngle{
+    0%{
+        transform: rotate(360deg);
+    }
+    100%{
+        transform: rotate(180deg);
     }
 }
