--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -553,7 +553,7 @@ section#comments{
                 align-items: center;
                 justify-content: center;
                 box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-
+                
                 & .card-image{
                     width: 290px;
                     height: 195px;
@@ -593,7 +593,7 @@ section#final-questions{
     background: linear-gradient(to bottom, #fff 10%, #FEBA78);
     width: 100vw;
     margin-top: 90px;
-    height: 500px;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -604,32 +604,65 @@ section#final-questions{
         display: flex;
         flex-direction: column;
         gap: 20px;
-
+        margin-bottom: 40px;
+        
+        & .final-questions-title{
+            margin-left: 40px;
+            position: absolute;
+            width: 800px;
+            color: #c6c6c650;
+            font-style: italic;
+            
+            & h3{
+                font-size: 60px;
+            }
+        }
         & .final-cards{
             background-color: white;
             width: 100%;
             height: 50px;
             border-radius: 7px;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+            transition: all 0.1s linear;
+            overflow: hidden;
+            z-index: 1;
 
+            &:nth-child(2){
+                margin-top: 47px;
+            }
             & .final-card-message{
                 width: 97%;
                 height: 100%;
                 display: flex;
-                align-items: center;
+                align-items: baseline;
                 justify-content: space-between;
-                
+
+                & h4{
+                    margin-top: 15px;
+                }
                 & i{
                     cursor: pointer;
-                    
-                    &:hover{
+
+                    &.hovered{
                         animation: rotateAngle 0.2s linear;
                         transform: rotate(180deg);
                     }
+                    &.no-hovered{
+                        animation: rotateAngle 0.2s linear reverse;
+                        transform: rotate(360deg);
+                    }
                 }
+            }
+            & span{
+                display: flex;
+                align-items: baseline;
+                justify-content: center;
+                margin: 15px 0px 15px 0px;
+                width: 97%;
+                height: 100%;
             }
         }
     }
